[package]
name = "tree-magic-cli"
version = "0.1.0"
authors = ["phiresky <phireskyde+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scoped_threadpool = "0.1.9"
tabwriter = "1.2.1"
walkdir = "2.3.1"
tree_magic_mini = "1.0.0"
clap = "2.33.1"
num_cpus = "1.13.0"

[build-dependencies]
built = "0.4"
